fix(site): make scrollbar overlay

--- a/packages/site/src/index.css
+++ b/packages/site/src/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  overflow: overlay;
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0;
